--- a/main.html
+++ b/main.html
@@ -75,4 +75,4 @@
     <section id="contact">
         <h2 class="section-title">Contact</h2>
         <p style="text-align: center; max-width: 800px; margin: 0 auto;">
-            Feel free to reach out to me at <a href="mailto:your.email@example.com">your.email@example.com</a> or connect with me on <a href="www.linkedin.com/in/sarthak-dhiman-7a967b208">LinkedIn
+            Feel free to reach out to me at <a href="sarthakdhiman261@gmail.com">gmail</a> or connect with me on <a href="www.linkedin.com/in/sarthak-dhiman-7a967b208">LinkedIn
